<resources>
    <string name="app_name">Messenger</string>

    <!-- Strings related to login -->
    <string name="editText_textUserName">Nazwa użytkownika</string>
    <string name="prompt_password">Hasło</string>
    <string name="button_textSignIn">Zaloguj się</string>
    <string name="button_textRegister">Zarejestruj się</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="tabConversation_text">Wiadomości</string>
    <string name="tabSearchUsers_text">Szukaj znajomych</string>
    <string name="tabInvitations_text">Zaproszenia</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_one_converstaion">OneConverstaionActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
